[gd_scene load_steps=26 format=3 uid="uid://eb12ugn447b3"]

[ext_resource type="Script" path="res://World/world.gd" id="1_p3dig"]
[ext_resource type="Resource" uid="uid://7nvpepil78rs" path="res://Waves/wave1.tres" id="2_p3ltq"]
[ext_resource type="Script" path="res://World/Path.gd" id="2_vfbrp"]
[ext_resource type="Script" path="res://World/MoneyLabel.gd" id="3_iag4t"]
[ext_resource type="Resource" uid="uid://baul6xqxse48s" path="res://Waves/wave2.tres" id="3_iyax1"]
[ext_resource type="Script" path="res://World/HealthLabel.gd" id="3_mqx38"]
[ext_resource type="Resource" uid="uid://d1vdelcnk7lmn" path="res://Waves/wave3.tres" id="4_mmp4y"]
[ext_resource type="Script" path="res://World/shop.gd" id="4_nfxdo"]
[ext_resource type="Resource" uid="uid://bqt0vw38mm4fl" path="res://Waves/wave4.tres" id="5_n1ga1"]
[ext_resource type="Resource" uid="uid://dstj3mv4i46tp" path="res://Waves/wave5.tres" id="6_08x4t"]
[ext_resource type="PackedScene" uid="uid://bb421g0tdgrgr" path="res://World/shop_button.tscn" id="6_ajp2n"]
[ext_resource type="Resource" uid="uid://cj2stkp5kwnss" path="res://Waves/wave6.tres" id="7_yme6o"]
[ext_resource type="Resource" uid="uid://nn4w0c68c7n1" path="res://Waves/wave7.tres" id="8_775ri"]
[ext_resource type="Resource" uid="uid://pca410e7ywqk" path="res://Waves/wave8.tres" id="9_368gs"]
[ext_resource type="Script" path="res://World/WaveLabel.gd" id="9_o78d1"]
[ext_resource type="Resource" uid="uid://cj2stkp5kwnss" path="res://Waves/wave10.tres" id="11_t3yxo"]
[ext_resource type="Resource" uid="uid://cj2stkp5kwnss" path="res://Waves/wave9.tres" id="11_ytfn8"]
[ext_resource type="Resource" uid="uid://cjv8338rchj35" path="res://PurchasableTurrets/basic_turret.tres" id="13_464ma"]
[ext_resource type="Resource" uid="uid://b5444ga0ihiyo" path="res://PurchasableTurrets/rifle_turret.tres" id="14_f5qdl"]
[ext_resource type="Resource" uid="uid://danoq4r23d6vy" path="res://PurchasableTurrets/fast_turret.tres" id="15_tq1hl"]
[ext_resource type="Resource" uid="uid://l2qcjfls3e2e" path="res://PurchasableTurrets/shotgun_turret.tres" id="16_3wuwi"]
[ext_resource type="Resource" uid="uid://b36y7unyp0m78" path="res://PurchasableTurrets/multi_turret.tres" id="17_6r4le"]
[ext_resource type="Script" path="res://World/ReloadButton.gd" id="23_j8he3"]

[sub_resource type="Curve2D" id="Curve2D_0i1sx"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 61, 30, 0, 0, 0, 0, 68, 598, 0, 0, 0, 0, 227, 598, 0, 0, 0, 0, 221, 50, 0, 0, 0, 0, 355, 50, 0, 0, 0, 0, 371, 595, 0, 0, 0, 0, 488, 598, 0, 0, 0, 0, 497, 66, 0, 0, 0, 0, 641, 71, 0, 0, 0, 0, 633, 582, 0, 0, 0, 0, 761, 588, 0, 0, 0, 0, 807, 100)
}
point_count = 12

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ef17"]

[node name="World" type="Node2D" node_paths=PackedStringArray("enemy_parent", "start_button", "lose_screen", "win_screen")]
script = ExtResource("1_p3dig")
waves = Array[Resource("res://Wave/wave.gd")]([ExtResource("2_p3ltq"), ExtResource("3_iyax1"), ExtResource("4_mmp4y"), ExtResource("5_n1ga1"), ExtResource("6_08x4t"), ExtResource("7_yme6o"), ExtResource("8_775ri"), ExtResource("9_368gs"), ExtResource("11_ytfn8"), ExtResource("11_t3yxo")])
enemy_parent = NodePath("Path")
start_button = NodePath("ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer/HBoxContainer3/StartButton")
lose_screen = NodePath("LoseScreenLayer")
win_screen = NodePath("WinScreenLayer")

[node name="Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_0i1sx")
script = ExtResource("2_vfbrp")

[node name="Line2D" type="Line2D" parent="Path"]
default_color = Color(0.921569, 0.654902, 0.258824, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Exit" type="Area2D" parent="."]
position = Vector2(812, 98)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(-2, -4)
shape = SubResource("RectangleShape2D_1ef17")

[node name="ShopLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="HBoxContainer" parent="ShopLayer"]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_lock_ = true

[node name="MarginContainer2" type="MarginContainer" parent="ShopLayer/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="MarginContainer3" type="MarginContainer" parent="ShopLayer/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="MarginContainer4" type="MarginContainer" parent="ShopLayer/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Sidebar" type="Panel" parent="ShopLayer/Control"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="ShopLayer/Control/Sidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.134979
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ShopLayer/Control/Sidebar/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Wave
"

[node name="WaveLabel" type="Label" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "1"
script = ExtResource("9_o78d1")

[node name="HBoxContainer4" type="HBoxContainer" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Health"

[node name="HealthLabel" type="Label" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 10
text = "100"
script = ExtResource("3_mqx38")

[node name="HBoxContainer2" type="HBoxContainer" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Money"

[node name="MoneyLabel" type="Label" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "100"
script = ExtResource("3_iag4t")

[node name="Label" type="Label" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Shop"
horizontal_alignment = 1

[node name="Shop" type="VBoxContainer" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer" node_paths=PackedStringArray("world")]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_nfxdo")
turrets = Array[Resource("res://Turret/purchasable_turret.gd")]([ExtResource("13_464ma"), ExtResource("14_f5qdl"), ExtResource("15_tq1hl"), ExtResource("16_3wuwi"), ExtResource("17_6r4le")])
world = NodePath("../../../../../..")
shop_button = ExtResource("6_ajp2n")

[node name="HBoxContainer3" type="HBoxContainer" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StartButton" type="Button" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 23
text = "Start Round"

[node name="SpeedButton" type="Button" parent="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
toggle_mode = true
text = "2x Speed"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
offset_right = 1176.0
offset_bottom = 675.0
color = Color(0.0509804, 0.478431, 0.0509804, 1)

[node name="LoseScreenLayer" type="CanvasLayer" parent="."]
process_mode = 2
layer = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="LoseScreenLayer"]
offset_right = 1174.0
offset_bottom = 676.0
color = Color(0, 0, 0, 0.317647)

[node name="MarginContainer" type="MarginContainer" parent="LoseScreenLayer"]
offset_right = 1152.0
offset_bottom = 648.0

[node name="PanelContainer" type="PanelContainer" parent="LoseScreenLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="LoseScreenLayer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="LoseScreenLayer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LoseScreenLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "You Lose!
"
horizontal_alignment = 1

[node name="Button" type="Button" parent="LoseScreenLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Play Again
"
script = ExtResource("23_j8he3")

[node name="WinScreenLayer" type="CanvasLayer" parent="."]
process_mode = 2
layer = 4
visible = false

[node name="ColorRect" type="ColorRect" parent="WinScreenLayer"]
offset_right = 1174.0
offset_bottom = 676.0
color = Color(0, 0, 0, 0.317647)

[node name="MarginContainer" type="MarginContainer" parent="WinScreenLayer"]
offset_right = 1152.0
offset_bottom = 648.0

[node name="PanelContainer" type="PanelContainer" parent="WinScreenLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="WinScreenLayer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="WinScreenLayer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="WinScreenLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "You Win!
"
horizontal_alignment = 1

[node name="Button" type="Button" parent="WinScreenLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Play Again
"
script = ExtResource("23_j8he3")

[connection signal="health_changed" from="." to="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer/HBoxContainer4/HealthLabel" method="_on_world_health_changed"]
[connection signal="round_ended" from="." to="." method="_on_round_ended"]
[connection signal="wave_count_changed" from="." to="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer/HBoxContainer/WaveLabel" method="_on_world_wave_count_changed"]
[connection signal="area_entered" from="Exit" to="." method="_on_exit_area_entered"]
[connection signal="pressed" from="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer/HBoxContainer3/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="toggled" from="ShopLayer/Control/Sidebar/MarginContainer/VBoxContainer/HBoxContainer3/SpeedButton" to="." method="_on_speed_button_toggled"]
[connection signal="pressed" from="LoseScreenLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Button" to="LoseScreenLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Button" method="_on_pressed"]
[connection signal="pressed" from="WinScreenLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Button" to="WinScreenLayer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Button" method="_on_pressed"]
